--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="minhas-planilhas">
           <img src="./image/foto do perfil.png" alt="Foto da Supervisora de venda direta" />
           <h1 class="nome">Marcela Sales</h1>
-          <h2 class="cargo">Supervisora de vendas direta</h2>
+          <h2 class="cargo">Supervisora</h2>
         </div>
 
         <div class="conteudo">
